--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 
 
     <dependencies>
+        <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -30,22 +31,25 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- General utils -->
         <dependency>
             <groupId>org.flowutils</groupId>
             <artifactId>flowutils</artifactId>
             <version>0.1.3</version>
         </dependency>
 
-        <dependency>
-            <groupId>commons-beanutils</groupId>
-            <artifactId>commons-beanutils</artifactId>
-            <version>1.8.3</version>
-        </dependency>
-
+        <!-- Serialization -->
         <dependency>
             <groupId>com.esotericsoftware.kryo</groupId>
             <artifactId>kryo</artifactId>
             <version>2.21</version>
+        </dependency>
+
+        <!-- Layout -->
+        <dependency>
+            <groupId>net.java.dev.designgridlayout</groupId>
+            <artifactId>designgridlayout</artifactId>
+            <version>1.11</version>
         </dependency>
 
     </dependencies>
